--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,9 @@
     --body-font: 'Source Sans Pro', sans-serif;
     --title-font: font-family: 'Alfa Slab One', cursive;
 
-
 }
+
+/* la pagina de font family es https://fonts.google.com */
 
 body{
     margin: 0;
