--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root{
     --dark-primary-color: rgb(12, 48, 87);
-    --light-primary-color: #BBDEFB;
-    --primary-color: #2196F3;
+    --light-primary-color: rgb(97, 115, 129);
+    --primary-color: rgb(22, 100, 163);
     --text: #ffffff;
     --accent-color: #009688;
     --primary-text: #212121;
@@ -15,6 +15,7 @@
 /* la pagina de font family es https://fonts.google.com */
 
 body{
+    color: white;
     margin: 0;
     padding: 0;
     background: var(--dark-primary-color);
@@ -25,7 +26,7 @@ body{
 
 .header{
    background: rgb(7, 28, 51);
-   color: var(--text-icons);
+   color: var(--text);
     
 }
 
@@ -36,7 +37,7 @@ body{
 
 
 .hero{
-    border: solid 2px red;
+    /* border: solid 2px red; */
     height: 300px;
     background: var(--primary-color);
     background-image: url("../img/portada.jpg");
@@ -61,14 +62,30 @@ h1{
     letter-spacing: -3px;
 }
 
+.portafolio{
+    background: var(--light-primary-color);
+
+}
+
+
+.project{
+    border: 1px solid #fafafa;
+    border-radius: 6px;
+    margin: 20px; 
+    background: rgb(37, 37, 37);
+    display: flex;
+    padding: 20px;
+    height: 415px;
+}
+
 
 .project-details{
 width: 500px;
-border: solid 2px red;
+/* border: solid 2px red; */
 }
 
 .project-img-container{
-    width: 500px;
-    border: solid 2px red;
+    width: 400px;
+    /* border: solid 2px red; */
 
 }
