--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,21 @@ body{
 .header{
    background: rgb(7, 28, 51);
    color: var(--text);
-    
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   height: 75px;
+}
+
+
+.header ul li{
+   margin: 0 15px;
+}
+
+.header ul{
+    list-style: none;
+    display: flex;
+    padding: 0;
 }
 
 .header a{
