--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ body{
     list-style: none;
     display: flex;
     padding: 0;
+    font-size: 20px;
 }
 
 .header a{
@@ -105,4 +106,19 @@ width: 500px;
     width: 400px;
     /* border: solid 2px red; */
 
+}
+
+
+
+.footer{
+    background: var(--primary-color);
+    height: 50px;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer a{
+    color: white;
+    text-decoration: none;
 }
