--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root{
     --dark-primary-color: rgb(12, 48, 87);
-    --light-primary-color: rgb(97, 115, 129);
+    --light-primary-color: rgb(59, 82, 100);
     --primary-color: rgb(22, 100, 163);
     --text: #ffffff;
     --accent-color: #009688;
@@ -12,7 +12,9 @@
 
 }
 
+
 /* la pagina de font family es https://fonts.google.com */
+
 
 body{
     color: white;
@@ -21,6 +23,7 @@ body{
     background: var(--dark-primary-color);
     font-family: var(--body-font);
     font-size: 16px;
+    
 }
 
 
@@ -36,6 +39,7 @@ body{
 
 .header ul li{
    margin: 0 15px;
+   list-style: none;
 }
 
 .header ul{
@@ -43,12 +47,14 @@ body{
     display: flex;
     padding: 0;
     font-size: 20px;
+    
 }
 
 .header a{
     color: var(--text);
     text-decoration: none;
 }
+
 
 
 .hero{
@@ -63,15 +69,20 @@ body{
     align-items: center;
 }
 
+
+
 .hero strong{
     color: rgb(187, 224, 255);
 }
 
 
-h1, h2, h3, h4, h5 .h6{
+h1, h2, h3, h4, h5, h6{
     font-family: var(--title-font);
     font-size: 23px;
+    font-weight: 500;
 }
+
+
 
 h1{
     font-size: 40px;
@@ -79,28 +90,44 @@ h1{
     letter-spacing: -3px;
 }
 
+
+
 .portafolio{
     background: var(--light-primary-color);
-    
+    padding: 6px;
 
 }
+
+
+.portafolio h2{
+    color: var(--text);
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 30px;
+    margin-bottom: 25px;
+}
+
 
 
 .project{
     border: 1px solid #fafafa;
     border-radius: 6px;
     margin: 20px; 
-    background: rgb(37, 37, 37);
+    background: linear-gradient(to top right, rgb(24, 24, 24), rgb(121, 121, 121));
     display: flex;
     padding: 20px;
     height: 415px;
+    /* rgb(37, 37, 37) */
 }
+
 
 
 .project-details{
 width: 500px;
 /* border: solid 2px red; */
 }
+
+
 
 .project-img-container{
     width: 400px;
@@ -117,6 +144,8 @@ width: 500px;
     display: flex;
     justify-content: space-between;
 }
+
+
 
 .footer a{
     color: white;
