--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,8 @@ h1{
     display: flex;
     padding: 20px;
     height: 415px;
+    justify-content: space-between;
+    align-items: center;
     /* rgb(37, 37, 37) */
 }
 
@@ -128,6 +130,20 @@ width: 500px;
 }
 
 
+.project-title{
+    font-size: 35px;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+
+.project-subtitle, .project-date, .project-url{
+    margin: 10px 0;
+}
+
+.project-description{
+    font-size: 20px;
+}
 
 .project-img-container{
     width: 400px;
