--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 :root{
+    --body-color: #8c9eff;
     --dark-primary-color: rgb(12, 48, 87);
     --light-primary-color: rgb(59, 82, 100);
     --primary-color: rgb(22, 100, 163);
@@ -6,7 +7,7 @@
     --accent-color: #009688;
     --primary-text: #212121;
     --secondary-text: #757575;
-    --divider-color: #BDBDBD;
+    --divider-color: rgb(170, 169, 169);
     --body-font: 'Source Sans Pro', sans-serif;
     --title-font: font-family: 'Alfa Slab One', cursive;
 
@@ -20,7 +21,8 @@ body{
     color: white;
     margin: 0;
     padding: 0;
-    background: var(--dark-primary-color);
+    /* background: var(--dark-primary-color); */
+    background: var(--body-color);
     font-family: var(--body-font);
     font-size: 16px;
     
@@ -67,6 +69,7 @@ body{
     background-position-x: right;
     display: flex;
     align-items: center;
+   
 }
 
 
@@ -161,7 +164,28 @@ width: 500px;
    margin: 10px;
    border: 3px red solid;
    width: 480px;
-   background:  var(--accent-color);
+   background:  var(--light-primary-color);
+   border-radius: 15px;
+   overflow: hidden;
+   flex-shrink: 0;
+   width: 400px;
+
+}
+
+
+
+.experience-details{
+    margin: 20px;
+    background: rgb(54, 101, 255);
+    margin-top: -81px; 
+    position: relative;
+    padding: 15px;
+    text-align: center;
+}
+
+
+.experience-description{
+    text-align: left;
 }
 
 
@@ -174,6 +198,7 @@ width: 500px;
     width: 420px;
     height: 320px;
     object-fit: cover;
+
 }
 
 
