--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     --body-color: #8c9eff;
     --dark-primary-color: rgb(12, 48, 87);
     --light-primary-color: rgb(59, 82, 100);
-    --primary-color: rgb(22, 100, 163);
+    --primary-color: rgb(18, 91, 151);
     --text: #ffffff;
     --accent-color: #009688;
     --primary-text: #212121;
@@ -181,6 +181,7 @@ width: 500px;
     position: relative;
     padding: 15px;
     text-align: center;
+    
 }
 
 
@@ -190,12 +191,13 @@ width: 500px;
 
 
 .experience-url{
-    color: rgb(0, 49, 49);
+    color: rgb(170, 218, 218);
     text-decoration: none;
     border: 1px solid rgb(1, 49, 49);
     border-radius: 3px;
     padding: 5px 20px;
     transition: 300ms all;
+    background: rgb(89, 60, 116);
 }
 
 
@@ -218,12 +220,69 @@ width: 500px;
 }
 
 
+.contact{
+    background: rgb(38, 137, 218);
+    color: white;
+    height: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+.contact-form-label{
+    display: block;
+}
+
+
+.social-container {
+    /* border: 1px solid red; */
+    
+}
+
+.social-link{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    /* border: 1px solid white; */
+    background-size: 50px 50px;
+    margin-left: 20px;
+    margin-right: 10px;
+    
+}
+
+
+.social-link.facebook{
+    background-image: url("../img/facebook.svg");
+}
+
+
+.social-link.instagram{
+    background-image: url("../img/instagram.svg");
+    
+}
+
+
+.social-link.whatsapp{
+    background-image: url("../img/whatsapp.svg");
+
+}
+
+
+.social-link.github{
+    background-image: url("../img/github.svg");
+}
+
+
+
+
 .footer{
     background: var(--primary-color);
     height: 50px;
     align-items: center;
     display: flex;
     justify-content: space-between;
+    
 }
 
 
