--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,22 @@ width: 500px;
 }
 
 
+.contact-form-email{
+ border: 1px solid grey;
+ border-radius: 50px;
+ padding: 5px 20px;  
+ padding-left: 25px;
+ background-image: url("../img/envelope.svg");
+ background-size: 15px;
+ background-repeat: no-repeat;
+ background-position-y: center;   
+ background-position-x: 5px;
+
+}
+
+
+
+
 .social-container {
     /* border: 1px solid red; */
     
