--- a/css/style.css
+++ b/css/style.css
@@ -249,9 +249,24 @@ width: 500px;
 }
 
 
+.contact-form-button{
+    text-transform: uppercase;
+    font-size: 12px;
+    color: red;
+    display: block;
+    margin-top: 10px;
+    background: transparent;
+    color: var(--text);
+    border-radius: 5px;
+    padding: 10px 16px;
+    width: 100px;
+
+}
 
 
-.social-container {
+
+
+.social-container{
     /* border: 1px solid red; */
     
 }
