--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 :root{
-    /* --body-color: #3251ff;
+    --body-color: #3251ff;
     --dark-primary-color: rgb(12, 48, 87);
     --light-primary-color: rgb(59, 82, 100);
     --primary-color: rgb(18, 91, 151);
     --text: #ffffff;
-    --accent-color: #009688; */
+    --accent-color: #009688;
     --primary-text: #212121;
     --secondary-text: #757575;
     --divider-color: rgb(170, 169, 169);
