Agregue los media de responsive design

--- a/css/style.css
+++ b/css/style.css
@@ -377,3 +377,22 @@ width: 500px;
 .footer a:hover{
     color: black;
 }
+
+/* Responsive Design */
+
+@media screen and (max-width: 1024px){
+
+
+}
+
+@media screen and (max-width: 768px){
+
+}
+
+@media screen and (max-width: 480px){
+    
+}
+
+@media screen and (max-width: 320px){
+    
+}
