--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,6 @@ h2{
     background: linear-gradient(to top right, rgb(24, 24, 24), rgb(121, 121, 121));
     display: flex;
     padding: 20px;
-    height: 415px;
     justify-content: space-between;
     align-items: center;
     /* rgb(37, 37, 37) */
@@ -168,7 +167,7 @@ h2{
 
 
 .project-details{
-width: 500px;
+width: 50%;
 /* border: solid 2px red; */
 }
 
@@ -189,10 +188,17 @@ width: 500px;
 }
 
 .project-img-container{
-    width: 700px;
+    width: 50%;
+    margin: 0;
     /* border: solid 2px red; */
 
 }
+
+
+.project-img{
+    width: 100%;
+}
+
 
 
 
@@ -396,6 +402,7 @@ width: 500px;
     /* body{
         background: red;
     } */
+
     .header {
         display: block;
         height: auto;
@@ -414,10 +421,51 @@ width: 500px;
         margin: 25px 0;
         text-align: center;
     }
+
+    .project{
+        display: block;
+        
+    }
+
+    .project-details{
+        width: 100%;
+        font-size: 16px;
+    }
+
+    .project-title{
+        font-size: 2em;
+
+    }
+
+    .project-subtitle{
+        font-size: 1.4em;
+
+    }
+
+    .project-date{
+        font-size: 1em;
+    }
+
+    .project-url{
+        font-size: 1em;
+
+    }
+
+    .project-date{
+        font-size: 1em;
+
+    }
+
+    .project-img-container{
+        width: 100%;
+    }
    
 }
 
 @media screen and (max-width: 480px){
+       .project-details{
+           font-size: 10px;
+       }
     
 }
 
