--- a/css/style.css
+++ b/css/style.css
@@ -233,8 +233,13 @@ width: 50%;
 }
 
 
+.experience-title{
+    font-size: 1.2em;
+}
+
 .experience-description{
     text-align: left;
+    font-size: 1em;
 }
 
 
@@ -246,6 +251,7 @@ width: 50%;
     padding: 5px 20px;
     transition: 300ms all;
     background: #18ffff;
+    font-size: 1em;
 }
 
 
@@ -475,6 +481,16 @@ width: 50%;
     .project-details{
            font-size: 10px;
        }
+
+    .experience{
+        width: 90%;
+
+    }
+
+
+    .experience-img{
+        width: 100%;
+    }
     
 }
 
@@ -483,4 +499,8 @@ width: 50%;
         padding: 40px 0;
     }
     
+    .experience-details{
+        font-size: 12px;
+        margin-top: -130px;
+    }
 }
