--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body{
     align-items: inherit;
     flex-wrap: inherit;
     flex: 1;
-    
+    flex-direction: inherit;
 
 }
 
@@ -314,7 +314,7 @@ width: 50%;
 .contact-form-button{
     text-transform: uppercase;
     font-size: 12px;
-    color: red;
+    /* color: red; */
     display: block;
     margin-top: 10px;
     background: transparent;
@@ -338,10 +338,10 @@ width: 50%;
 
 .social-link{
     display: inline-block;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     /* border: 1px solid white; */
-    background-size: 50px 50px;
+    background-size: 40px 40px;
     margin-left: 20px;
     margin-right: 10px;
     
@@ -490,6 +490,18 @@ width: 50%;
 
     .experience-img{
         width: 100%;
+    }
+
+    .contact{
+        flex-direction: column;
+        height: auto;
+    }
+
+    .contact-form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 10px; 
     }
     
 }
