--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ width: 50%;
 
 .footer{
     background: var(--primary-color);
-    height: 50px;
+    /* height: 50px; */
     align-items: center;
     display: flex;
     justify-content: space-between;
@@ -504,6 +504,10 @@ width: 50%;
         margin-bottom: 10px; 
     }
     
+    footer{
+        flex-direction: column;
+        height: auto;
+    }
 }
 
 @media screen and (max-width: 320px){
