--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,35 @@
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?tc7q2y');
+    src:  url('../fonts/icomoon.eot?tc7q2y#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?tc7q2y') format('truetype'),
+      url('../fonts/icomoon.woff?tc7q2y') format('woff'),
+      url('../fonts/icomoon.svg?tc7q2y#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-menu:before {
+    content: "\e9bd";
+  }
+  
+
 :root{
     --body-color: #3251ff;
     --dark-primary-color: rgb(12, 48, 87);
@@ -10,6 +42,7 @@
     --divider-color: rgb(170, 169, 169);
     --body-font: 'Source Sans Pro', sans-serif;
     --title-font: font-family: 'Alfa Slab One', cursive;
+    /* la pagina de font family es https://fonts.google.com */
 
 }
 
@@ -22,7 +55,6 @@
 } */
 
 
-/* la pagina de font family es https://fonts.google.com */
 
 
 body{
@@ -30,7 +62,7 @@ body{
     margin: 0;
     padding: 0;
     /* background: var(--dark-primary-color); */
-    background: linear-gradient(to top right, #00537E, #3AA17E);
+    background: linear-gradient(0deg,#181733 0,#181733 30%,rgba(173,16,40,.5));
     font-family: var(--body-font);
     font-size: 16px;
 
@@ -49,7 +81,24 @@ body{
     flex-wrap: inherit;
     flex: 1;
     flex-direction: inherit;
+    padding: 0 .5rem; 
+    
+}
 
+.burguer-button{
+    color: #8d1a17;
+    background: var(--dark-primary-color);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    font-size: 30px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 777;
 }
 
 
@@ -154,7 +203,7 @@ h2{
     border: 1px solid #fafafa;
     border-radius: 6px;
     margin: 20px;
-    background: linear-gradient(to top right, rgb(24, 24, 24), rgb(121, 121, 121));
+    background-image: linear-gradient(90deg,#8d1a17,#181733);
     display: flex;
     padding: 20px;
     justify-content: space-between;
@@ -407,6 +456,10 @@ width: 50%;
     /* body{
         background: red;
     } */
+
+    .burguer-button{
+        display: flex;
+    }
 
     .hero{
         font-size: 18px;
